# RIG

./: .gitignore  README.md  commands.md  realities-and-outlines.md  smoketests.md
release-audits/: latest.md  v0.17.0.md
rig/: Cargo.toml  README.md
rig/examples/: allocation_attribution.rs  artifact_compare.rs  artifact_lifecycle.rs  checkpoint_capture.rs  demo.rs  ecs_simulation.rs  evidence_certificate.rs  evidence_exports.rs  evidence_profiles.rs  log_ingestion.rs  memory_budget.rs  memory_doctrine.rs  pathfinding.rs  policy_comparison.rs  regression_gate.rs  workload_capture.rs  workload_contract.rs
rig/src/: lib.rs
rig/tests/: abuse.rs  allocation_attribution.rs  api.rs  artifact.rs  basic.rs  budget.rs  certificate.rs  contract.rs  evidence_capture.rs  export.rs  memory_doctrine.rs  policy.rs  policy_comparison.rs  profile.rs  regression.rs  summary.rs  validation_runner.rs  workload_examples.rs
scripts/: validate-tail.sh  validate.sh
