[package]
name = "rig"
version = "0.3.0"
edition = "2021"
description = "Visible allocation and growth tracking for Rust containers."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", path = "../vendor/serde", features = ["derive"] }
serde_json = { version = "1", path = "../vendor/serde_json" }
